[package]
name = "coinbase-bitcoin"
version = "0.1.0"
edition = "2018"
description = "Get Bitcoin information from Coinbase"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
